- include simple vertical alignment css to try to address field positioning (#110)
- account for tab out of open dropdown control, and various other key issues (#84)
- assign ids to the generated elements for access by other jQuery processing, and keep the various ids
  unique (#97, #107, #111)
- copy the tabindex of the underlying select if provided (#100)

1.0
- rework CSS tagging to utilize jQuery ThemeRoller settings
- added onComplete callback option (blur does not fire)
- added forceMultiple option (known restriction for IE6)
- added icon option (ThemeRoller based)
- explicit open/close rather than toggle to keep dropdown state correct
- limited use of inline-block (known cross-browser issues)
- try/catch to protect against callback failures
- various cleanup to suppress cross-talk between multiple dropdowns on same page
- made generated item ids more unique to keep from colliding with parent ids
- fixed many keyboard handling issues -- but tab out of the dropdown is still incomplete
  (radiobuttons, checkboxes must be disabled to keep them out of tab order)
- created 'doc' as independent directory under version control
  (easier to keep doc page reflecting current release rather than pending work-in-progress)
- callout to explicit versions of jquery core and ui to better track testing environment

0.9
- fixed some warnings for unused variabled with yui processor (#52)
- added patch from munkyboy to aoutomatically syncronize with the source select value changes (#48)
- fixed a problem with positioning and z-index (#47, #53, #54, #56)
- disabled options are not transformed in disabled checkboxes; the disabled checkboxes are displayed but ignored (#42)
- !known issue: keyboard handling is broken

0.8
- changed zip structure to provide minified version and modified to ant build (#40)
- fixed a problem where dropdown is not visible if displayed in modal dialog with z-index above some value (#41)